--- a/about/index.html
+++ b/about/index.html
@@ -2,22 +2,22 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Temperate Designs</title>
+<title>About | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simple yet useful apps.">
+<meta name=description content="Simply Useful Apps">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/categories/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
-<link href=/categories/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
-<meta property="og:title" content="Categories">
-<meta property="og:description" content="Simple yet useful apps.">
+<link href=/about/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
+<link href=/about/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
+<meta property="og:title" content="About">
+<meta property="og:description" content="Simply Useful Apps">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://temperate-designs.github.io/categories/">
-<meta itemprop=name content="Categories">
-<meta itemprop=description content="Simple yet useful apps."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Categories">
-<meta name=twitter:description content="Simple yet useful apps.">
+<meta property="og:url" content="https://temperate-designs.github.io/about/">
+<meta itemprop=name content="About">
+<meta itemprop=description content="Simply Useful Apps"><meta name=twitter:card content="summary">
+<meta name=twitter:title content="About">
+<meta name=twitter:description content="Simply Useful Apps">
 </head>
 <body class="ma0 avenir bg-near-white">
 <header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
@@ -43,20 +43,20 @@ Contact
 </nav>
 <div class="tc-l pv4 pv6-l ph3 ph4-ns">
 <h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-Categories
+About
 </h1>
+<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
+Simply Useful Apps
+</h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="cf pa3 pa4-m pa4-l">
-<div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">
-</div>
-</article>
-<div class="mw8 center">
-<section class=ph4>
+<article class="pa3 pa4-ns nested-copy-line-height nested-img">
+<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>Coming soon.</p>
 </section>
-</div>
+<section class="flex-ns flex-wrap justify-around mt5">
+</section></article>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
