--- a/contact/index.html
+++ b/contact/index.html
@@ -2,26 +2,26 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Temperate Designs</title>
+<title>Contact | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simple yet useful apps.">
+<meta name=description content="We'd love to hear from you">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="NOINDEX, NOFOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.css>
-<link href=/categories/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
-<link href=/categories/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
-<meta property="og:title" content="Categories">
-<meta property="og:description" content="Simple yet useful apps.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://temperate-designs.github.io/categories/">
-<meta itemprop=name content="Categories">
-<meta itemprop=description content="Simple yet useful apps."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Categories">
-<meta name=twitter:description content="Simple yet useful apps.">
+<meta property="og:title" content="Contact">
+<meta property="og:description" content="We'd love to hear from you">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://temperate-designs.github.io/contact/"><meta property="article:section" content>
+<meta itemprop=name content="Contact">
+<meta itemprop=description content="We'd love to hear from you">
+<meta itemprop=wordCount content="5">
+<meta itemprop=keywords content><meta name=twitter:card content="summary">
+<meta name=twitter:title content="Contact">
+<meta name=twitter:description content="We'd love to hear from you">
 </head>
 <body class="ma0 avenir bg-near-white">
-<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
-<div class=bg-black-60>
+<header>
+<div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -41,21 +41,22 @@ Contact
 </div>
 </div>
 </nav>
-<div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-Categories
-</h1>
-</div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="cf pa3 pa4-m pa4-l">
-<div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">
+<div class="flex-l mt2 mw8 center">
+<article class="center cf pv5 ph3 ph4-ns mw7">
+<header>
+<p class="f6 b helvetica tracked">
+</p>
+<h1 class=f1>
+Contact
+</h1>
+</header>
+<div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
+<p>Send us email at <a href=mailto:temperatedesigns2@gmail.com>temperatedesigns2@gmail.com</a>.</p>
 </div>
 </article>
-<div class="mw8 center">
-<section class=ph4>
-</section>
 </div>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
