--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="Simple yet useful apps.">
 <meta name=generator content="Hugo 0.88.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=/ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content="Simple yet useful apps.">
 <meta property="og:type" content="website">
@@ -16,8 +16,10 @@
 <meta itemprop=description content="Simple yet useful apps."><meta name=twitter:card content="summary">
 <meta name=twitter:title content="404 Page not found">
 <meta name=twitter:description content="Simple yet useful apps.">
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header>
 <div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
