--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="Simply Useful Apps">
 <meta name=generator content="Hugo 0.88.1">
-<meta name=ROBOTS content="NOINDEX, NOFOLLOW">
-<link rel=stylesheet href=/ananke/css/main.min.css>
+<meta name=ROBOTS content="INDEX, FOLLOW">
+<link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <link href=/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
 <link href=/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
 <meta property="og:title" content="Temperate Designs">
@@ -18,8 +18,10 @@
 <meta itemprop=description content="Simply Useful Apps"><meta name=twitter:card content="summary">
 <meta name=twitter:title content="Temperate Designs">
 <meta name=twitter:description content="Simply Useful Apps">
+<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
+<script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
-<body class="ma0 avenir bg-near-white">
+<body class="ma0 avenir bg-near-white production">
 <header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
 <div class=bg-black-60>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
