--- a/sunflower-dash/index.html
+++ b/sunflower-dash/index.html
@@ -2,28 +2,28 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>About | Temperate Designs</title>
+<title>Sunflower Dash | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="Simply Useful Apps">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<link href=/about/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
-<link href=/about/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
-<meta property="og:title" content="About">
+<meta property="og:title" content="Sunflower Dash">
 <meta property="og:description" content="Simply Useful Apps">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://temperate-designs.github.io/about/">
-<meta itemprop=name content="About">
-<meta itemprop=description content="Simply Useful Apps"><meta name=twitter:card content="summary">
-<meta name=twitter:title content="About">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://temperate-designs.github.io/sunflower-dash/"><meta property="article:section" content>
+<meta itemprop=name content="Sunflower Dash">
+<meta itemprop=description content="Simply Useful Apps">
+<meta itemprop=wordCount content="36">
+<meta itemprop=keywords content><meta name=twitter:card content="summary">
+<meta name=twitter:title content="Sunflower Dash">
 <meta name=twitter:description content="Simply Useful Apps">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white production">
-<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
-<div class=bg-black-60>
+<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/black-oil-sunflower.jpg)>
+<div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -53,22 +53,52 @@ Temperate Designs
 </div>
 </div>
 </nav>
-<div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-About
-</h1>
-<h2 class="fw1 f5 f3-l white-80 measure-wide-l center mt3">
+<div class="tc-l pv6 ph3 ph4-ns">
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sunflower Dash</h1>
+<h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
 Simply Useful Apps
 </h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="pa3 pa4-ns nested-copy-line-height nested-img">
-<section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><p>Coming soon.</p>
-</section>
-<section class="flex-ns flex-wrap justify-around mt5">
-</section></article>
+<div class="flex-l mt2 mw8 center">
+<article class="center cf pv5 ph3 ph4-ns mw7">
+<header>
+<p class="f6 b helvetica tracked">
+</p>
+<h1 class=f1>
+Sunflower Dash
+</h1>
+</header>
+<div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
+<table>
+<thead>
+<tr>
+<th>Kanban</th>
+<th>Issue</th>
+<th>PRs</th>
+<th>CI</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><a href=https://github.com/Temperate-Designs/sunflower-dash/projects/1><img src=https://img.shields.io/badge/project-Kanban-orange alt=Project></a></td>
+<td><a href=https://github.com/Temperate-Designs/sunflower-dash/issues><img src="https://img.shields.io/github/issues-raw/Temperate-Designs/sunflower-dash?color=green&logo=GitHub&logoColor=white" alt="GitHub issues"></a></td>
+<td><a href=https://github.com/Temperate-Designs/sunflower-dash/pulls><img src="https://img.shields.io/github/issues-pr-raw/Temperate-Designs/sunflower-dash?color=purple&logo=Github" alt="GitHub pull requests"></a></td>
+<td><a href=https://github.com/Temperate-Designs/sunflower-dash/actions/workflows/CI.yaml><img src="https://img.shields.io/github/workflow/status/Temperate-Designs/sunflower-dash/CI%20tests?color=aqua&label=CI&logoColor=indigo" alt=CI></a></td>
+</tr>
+</tbody>
+</table>
+<p><a href=https://gitpod.io#https://github.com/Temperate-Designs/sunflower-dash><img src=https://gitpod.io/button/open-in-gitpod.svg alt=GitPod></a></p>
+<h1 id=developer-notes>Developer Notes</h1>
+<p>We suggest you use a Flutter aware IDE such as Android Studio, Visual
+Studio Code with the Flutter plugin, or go over to
+<a href=https://gitpod.io#https://github.com/Temperate-Designs/sunflower-dash>GitPod</a>
+where everything is already set up.</p>
+</div>
+</article>
+</div>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
 <div class="flex justify-between">
