--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@ Contact
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
+<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash page">
 Sunflower Dash
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/game-design/ title="Sunflower Dash - Game Design page">
+Sunflower Dash - Game Design
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
@@ -70,7 +75,9 @@ Simply Useful Apps
 </header>
 <main class=pb7 role=main>
 <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-<p>Our apps are published in the <a href="https://play.google.com/store/apps/dev?id=5570979445892256716">Google Play Store</a>. Go check them out!</p>
+<p>Our apps are published in the <a href="https://play.google.com/store/apps/dev?id=5570979445892256716">Google Play
+Store</a>.
+Go check them out!</p>
 </article>
 <div class="pa3 pa4-ns w-100 w-70-ns center">
 <h1 class=flex-none>
