--- a/petals/index.html
+++ b/petals/index.html
@@ -2,28 +2,28 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Temperate Designs</title>
+<title>Sunflower Dash | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simple yet useful apps.">
+<meta name=description content="Simply Useful Apps">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<link href=/tags/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
-<link href=/tags/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
-<meta property="og:title" content="Tags">
-<meta property="og:description" content="Simple yet useful apps.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://temperate-designs.github.io/tags/">
-<meta itemprop=name content="Tags">
-<meta itemprop=description content="Simple yet useful apps."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Tags">
-<meta name=twitter:description content="Simple yet useful apps.">
+<meta property="og:title" content="Sunflower Dash">
+<meta property="og:description" content="Simply Useful Apps">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://temperate-designs.github.io/petals/"><meta property="article:section" content>
+<meta itemprop=name content="Sunflower Dash">
+<meta itemprop=description content="Simply Useful Apps">
+<meta itemprop=wordCount content="69">
+<meta itemprop=keywords content><meta name=twitter:card content="summary">
+<meta name=twitter:title content="Sunflower Dash">
+<meta name=twitter:description content="Simply Useful Apps">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white production">
-<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
-<div class=bg-black-60>
+<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/black-oil-sunflower.jpg)>
+<div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -63,40 +63,38 @@ Temperate Designs
 </div>
 </div>
 </nav>
-<div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-Tags
-</h1>
+<div class="tc-l pv6 ph3 ph4-ns">
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sunflower Dash</h1>
+<h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
+Simply Useful Apps
+</h2>
 </div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="cf pa3 pa4-m pa4-l">
-<div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">
+<div class="flex-l mt2 mw8 center">
+<article class="center cf pv5 ph3 ph4-ns mw7">
+<header>
+<p class="f6 b helvetica tracked">
+</p>
+<h1 class=f1>
+Sunflower Dash
+</h1>
+</header>
+<div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
+<ul>
+<li>Petals are like money.</li>
+<li>You can get things from the shop with them.</li>
+<li>You get flower petels when you run into them.</li>
+<li>Petals are yellow</li>
+<li>You get one on sun flowers,two on bell flowers,and one on butterflies.</li>
+<li>You don&rsquo;t get one petal on every flower.</li>
+<li>If you get rainbow petals you can get any thing in the shop.</li>
+<li>Rainbow petals are very rare.</li>
+<li>Big petals are 3 small petals.</li>
+</ul>
 </div>
 </article>
-<div class="mw8 center">
-<section class=ph4>
-<h2 class=f1>
-<a href=/tags/announcement class="link blue hover-black">
-Tag: announcement
-</a>
-</h2>
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Post</span>
-<h1 class="f3 near-black">
-<a href=/post/my-first-post/ class="link black dim">
-My First Post
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-We are pleased to share our new webpage with a completely new look!
-Watch for new articles in the coming weeks!
-</div>
-</div>
-</div>
-</section>
 </div>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
