--- a/types_of_sunflowers/index.html
+++ b/types_of_sunflowers/index.html
@@ -4,26 +4,30 @@
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <title>Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simple yet useful apps.">
+<meta name=description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+ Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<link href=/tags/index.xml rel=alternate type=application/rss+xml title="Temperate Designs">
-<link href=/tags/index.xml rel=feed type=application/rss+xml title="Temperate Designs">
-<meta property="og:title" content="Tags">
-<meta property="og:description" content="Simple yet useful apps.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://temperate-designs.github.io/tags/">
-<meta itemprop=name content="Tags">
-<meta itemprop=description content="Simple yet useful apps."><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Tags">
-<meta name=twitter:description content="Simple yet useful apps.">
+<meta property="og:title" content>
+<meta property="og:description" content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+ Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
+<meta property="og:type" content="article">
+<meta property="og:url" content="https://temperate-designs.github.io/types_of_sunflowers/"><meta property="article:section" content>
+<meta itemprop=name content>
+<meta itemprop=description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+ Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
+<meta itemprop=wordCount content="307">
+<meta itemprop=keywords content><meta name=twitter:card content="summary">
+<meta name=twitter:title content>
+<meta name=twitter:description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+ Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white production">
-<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/red-and-blue-ink-explosion-picjumbo-com-logo.jpg)>
-<div class=bg-black-60>
+<header>
+<div class=bg-black>
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -63,40 +67,42 @@ Temperate Designs
 </div>
 </div>
 </nav>
-<div class="tc-l pv4 pv6-l ph3 ph4-ns">
-<h1 class="f2 f-subheadline-l fw2 white-90 mb0 lh-title">
-Tags
-</h1>
-</div>
 </div>
 </header>
 <main class=pb7 role=main>
-<article class="cf pa3 pa4-m pa4-l">
-<div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">
+<div class="flex-l mt2 mw8 center">
+<article class="center cf pv5 ph3 ph4-ns mw7">
+<header>
+<p class="f6 b helvetica tracked">
+</p>
+<h1 class=f1>
+</h1>
+</header>
+<div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
+<p>The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted.
+There are many different types of sunflower. Here are a few:</p>
+<ul>
+<li>Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O
+U</li>
+<li>Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick. They will have sad faces.
+Face: O O
+n</li>
+<li>Swaying sunflowers have silly faces and will sway from side to side. Player will have to time their jump or will fall off the sunflower
+and have to either get back on or face the consequences below. Face: @ @
+Y</li>
+<li>Eaten sunflowers have x eyes and little bites on the sides. They break as soon as you jump on them, then you fall onto the ground.
+are often near gopher holes or near different animals. They eat the sunflowers. These don&rsquo;t come very often. Face: X X
+n
+There are more types of flowers like</li>
+<li>Bell flower cannons are basically bell flowers. If you jump on one, it will slingshot you. You can&rsquo;t controll how far it slingshots you,
+and you can&rsquo;t controll where you go either. They slingshot you in the opposite direction the flower is from the stem (if it&rsquo;s on the left,
+it will slingshot you forwards, if it&rsquo;s on the right, it will slingshot you backwards.</li>
+<li>Weeds will hide stuff on the ground, and there&rsquo;s usually a small gap where they are; they take over from the sunflowers.</li>
+<li>Dandelions will scatter seeds that you can ride on. You can not controll where you go, and dissapear, leaving the seed. You can grab the
+seed to plant another dandelion (ex. if you need to cross a patch of weeds)</li>
+</ul>
 </div>
 </article>
-<div class="mw8 center">
-<section class=ph4>
-<h2 class=f1>
-<a href=/tags/announcement class="link blue hover-black">
-Tag: announcement
-</a>
-</h2>
-<div class="relative w-100 mb4 bg-white nested-copy-line-height">
-<div class="bg-white mb3 pa4 gray overflow-hidden">
-<span class="f6 db">Post</span>
-<h1 class="f3 near-black">
-<a href=/post/my-first-post/ class="link black dim">
-My First Post
-</a>
-</h1>
-<div class="nested-links f5 lh-copy nested-copy-line-height">
-We are pleased to share our new webpage with a completely new look!
-Watch for new articles in the coming weeks!
-</div>
-</div>
-</div>
-</section>
 </div>
 </main>
 <footer class="bg-black bottom-0 w-100 pa3" role=contentinfo>
