--- a/butterfly/index.html
+++ b/butterfly/index.html
@@ -2,22 +2,22 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Sunflower Dash | Temperate Designs</title>
+<title>Sunflower Dash - Butterfly | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Simply Useful Apps">
+<meta name=description content=" Butterflys pick you up You fly for 10 seconds You do not control butterflys Butterflys move randomly they can go up, down, backwards, and forwards  ">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<meta property="og:title" content="Sunflower Dash">
-<meta property="og:description" content="Simply Useful Apps">
+<meta property="og:title" content="Sunflower Dash - Butterfly">
+<meta property="og:description" content=" Butterflys pick you up You fly for 10 seconds You do not control butterflys Butterflys move randomly they can go up, down, backwards, and forwards  ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://temperate-designs.github.io/butterfly/"><meta property="article:section" content>
-<meta itemprop=name content="Sunflower Dash">
-<meta itemprop=description content="Simply Useful Apps">
+<meta itemprop=name content="Sunflower Dash - Butterfly">
+<meta itemprop=description content=" Butterflys pick you up You fly for 10 seconds You do not control butterflys Butterflys move randomly they can go up, down, backwards, and forwards  ">
 <meta itemprop=wordCount content="25">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Sunflower Dash">
-<meta name=twitter:description content="Simply Useful Apps">
+<meta name=twitter:title content="Sunflower Dash - Butterfly">
+<meta name=twitter:description content=" Butterflys pick you up You fly for 10 seconds You do not control butterflys Butterflys move randomly they can go up, down, backwards, and forwards  ">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
@@ -42,13 +42,58 @@ Contact
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash page">
+<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
 Sunflower Dash
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash - Bees and Wasps page">
+Sunflower Dash - Bees and Wasps
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/butterfly/ title="Sunflower Dash - Butterfly page">
+Sunflower Dash - Butterfly
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/flowers/ title="Sunflower Dash - Flowers page">
+Sunflower Dash - Flowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
 <a class="hover-white no-underline white-90" href=/game-design/ title="Sunflower Dash - Game Design page">
 Sunflower Dash - Game Design
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/petals/ title="Sunflower Dash - Petals page">
+Sunflower Dash - Petals
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/shop/ title="Sunflower Dash - Shop page">
+Sunflower Dash - Shop
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/things-on-the-ground/ title="Sunflower Dash - Things on the ground page">
+Sunflower Dash - Things on the ground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/types_of_sunflowers/ title="Sunflower Dash - Types of sunflowers page">
+Sunflower Dash - Types of sunflowers
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/underground/ title="Sunflower Dash - Underground page">
+Sunflower Dash - Underground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/sunflowers/ title="Sunflowers page">
+Sunflowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
@@ -64,10 +109,7 @@ Temperate Designs
 </div>
 </nav>
 <div class="tc-l pv6 ph3 ph4-ns">
-<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sunflower Dash</h1>
-<h2 class="fw1 f5 f3-l white-80 measure-wide-l center lh-copy mt3 mb4">
-Simply Useful Apps
-</h2>
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sunflower Dash - Butterfly</h1>
 </div>
 </div>
 </header>
@@ -78,7 +120,7 @@ Simply Useful Apps
 <p class="f6 b helvetica tracked">
 </p>
 <h1 class=f1>
-Sunflower Dash
+Sunflower Dash - Butterfly
 </h1>
 </header>
 <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
