--- a/flowers/index.html
+++ b/flowers/index.html
@@ -2,32 +2,32 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Temperate Designs</title>
+<title>Sunflower Dash - Flowers | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
 <meta name=description content="Flowers
--Sunflowers are the main flower that you will see throughout the game. -Some sunflowers will be wilted and collapse 1 second after contact with the ball. -Bellflowers catapult you forward into the air and you will fly for 5 seconds. -Swaying sunflowers sway in the wind and you have to calculate when to jump on them. -Dandelions let off dandelion seeds that carry you through the air.">
+ Sunflowers are the main flower that you will see throughout the game. Some sunflowers will be wilted and collapse 1 second after contact with the ball. Bellflowers catapult you forward into the air and you will fly for 5 seconds. Swaying sunflowers sway in the wind and you have to calculate when to jump on them. Dandelions let off dandelion seeds that carry you through the air.  ">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<meta property="og:title" content>
+<meta property="og:title" content="Sunflower Dash - Flowers">
 <meta property="og:description" content="Flowers
--Sunflowers are the main flower that you will see throughout the game. -Some sunflowers will be wilted and collapse 1 second after contact with the ball. -Bellflowers catapult you forward into the air and you will fly for 5 seconds. -Swaying sunflowers sway in the wind and you have to calculate when to jump on them. -Dandelions let off dandelion seeds that carry you through the air.">
+ Sunflowers are the main flower that you will see throughout the game. Some sunflowers will be wilted and collapse 1 second after contact with the ball. Bellflowers catapult you forward into the air and you will fly for 5 seconds. Swaying sunflowers sway in the wind and you have to calculate when to jump on them. Dandelions let off dandelion seeds that carry you through the air.  ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://temperate-designs.github.io/flowers/"><meta property="article:section" content>
-<meta itemprop=name content>
+<meta itemprop=name content="Sunflower Dash - Flowers">
 <meta itemprop=description content="Flowers
--Sunflowers are the main flower that you will see throughout the game. -Some sunflowers will be wilted and collapse 1 second after contact with the ball. -Bellflowers catapult you forward into the air and you will fly for 5 seconds. -Swaying sunflowers sway in the wind and you have to calculate when to jump on them. -Dandelions let off dandelion seeds that carry you through the air.">
+ Sunflowers are the main flower that you will see throughout the game. Some sunflowers will be wilted and collapse 1 second after contact with the ball. Bellflowers catapult you forward into the air and you will fly for 5 seconds. Swaying sunflowers sway in the wind and you have to calculate when to jump on them. Dandelions let off dandelion seeds that carry you through the air.  ">
 <meta itemprop=wordCount content="68">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
-<meta name=twitter:title content>
+<meta name=twitter:title content="Sunflower Dash - Flowers">
 <meta name=twitter:description content="Flowers
--Sunflowers are the main flower that you will see throughout the game. -Some sunflowers will be wilted and collapse 1 second after contact with the ball. -Bellflowers catapult you forward into the air and you will fly for 5 seconds. -Swaying sunflowers sway in the wind and you have to calculate when to jump on them. -Dandelions let off dandelion seeds that carry you through the air.">
+ Sunflowers are the main flower that you will see throughout the game. Some sunflowers will be wilted and collapse 1 second after contact with the ball. Bellflowers catapult you forward into the air and you will fly for 5 seconds. Swaying sunflowers sway in the wind and you have to calculate when to jump on them. Dandelions let off dandelion seeds that carry you through the air.  ">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white production">
-<header>
-<div class=bg-black>
+<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/black-oil-sunflower.jpg)>
+<div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -46,13 +46,58 @@ Contact
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash page">
+<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
 Sunflower Dash
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash - Bees and Wasps page">
+Sunflower Dash - Bees and Wasps
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/butterfly/ title="Sunflower Dash - Butterfly page">
+Sunflower Dash - Butterfly
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/flowers/ title="Sunflower Dash - Flowers page">
+Sunflower Dash - Flowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
 <a class="hover-white no-underline white-90" href=/game-design/ title="Sunflower Dash - Game Design page">
 Sunflower Dash - Game Design
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/petals/ title="Sunflower Dash - Petals page">
+Sunflower Dash - Petals
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/shop/ title="Sunflower Dash - Shop page">
+Sunflower Dash - Shop
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/things-on-the-ground/ title="Sunflower Dash - Things on the ground page">
+Sunflower Dash - Things on the ground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/types_of_sunflowers/ title="Sunflower Dash - Types of sunflowers page">
+Sunflower Dash - Types of sunflowers
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/underground/ title="Sunflower Dash - Underground page">
+Sunflower Dash - Underground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/sunflowers/ title="Sunflowers page">
+Sunflowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
@@ -67,6 +112,9 @@ Temperate Designs
 </div>
 </div>
 </nav>
+<div class="tc-l pv6 ph3 ph4-ns">
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sunflower Dash - Flowers</h1>
+</div>
 </div>
 </header>
 <main class=pb7 role=main>
@@ -76,15 +124,18 @@ Temperate Designs
 <p class="f6 b helvetica tracked">
 </p>
 <h1 class=f1>
+Sunflower Dash - Flowers
 </h1>
 </header>
 <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
 <p>Flowers</p>
-<p>-Sunflowers are the main flower that you will see throughout the game.
--Some sunflowers will be wilted and collapse 1 second after contact with the ball.
--Bellflowers catapult you forward into the air and you will fly for 5 seconds.
--Swaying sunflowers sway in the wind and you have to calculate when to jump on them.
--Dandelions let off dandelion seeds that carry you through the air.</p>
+<ul>
+<li>Sunflowers are the main flower that you will see throughout the game.</li>
+<li>Some sunflowers will be wilted and collapse 1 second after contact with the ball.</li>
+<li>Bellflowers catapult you forward into the air and you will fly for 5 seconds.</li>
+<li>Swaying sunflowers sway in the wind and you have to calculate when to jump on them.</li>
+<li>Dandelions let off dandelion seeds that carry you through the air.</li>
+</ul>
 </div>
 </article>
 </div>
