--- a/sunflowers/index.html
+++ b/sunflowers/index.html
@@ -4,26 +4,26 @@
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
 <title>Sunflowers | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  Back to [Game Design]({{ site.baseurl }}{% link game-design.md %}).">
+<meta name=description content=" Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  ">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
 <meta property="og:title" content="Sunflowers">
-<meta property="og:description" content="Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  Back to [Game Design]({{ site.baseurl }}{% link game-design.md %}).">
+<meta property="og:description" content=" Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  ">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://temperate-designs.github.io/sunflowers/"><meta property="article:section" content>
 <meta itemprop=name content="Sunflowers">
-<meta itemprop=description content="Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  Back to [Game Design]({{ site.baseurl }}{% link game-design.md %}).">
-<meta itemprop=wordCount content="45">
+<meta itemprop=description content=" Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  ">
+<meta itemprop=wordCount content="36">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
 <meta name=twitter:title content="Sunflowers">
-<meta name=twitter:description content="Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  Back to [Game Design]({{ site.baseurl }}{% link game-design.md %}).">
+<meta name=twitter:description content=" Not all Sunflowers behave the same way. Some Sunflowers stay still. Sunflowers go up and down and side to side. The flower petals are floating in the air and you need to jump to get them.  ">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white production">
-<header>
-<div class=bg-black>
+<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/black-oil-sunflower.jpg)>
+<div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -42,13 +42,58 @@ Contact
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash page">
+<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
 Sunflower Dash
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash - Bees and Wasps page">
+Sunflower Dash - Bees and Wasps
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/butterfly/ title="Sunflower Dash - Butterfly page">
+Sunflower Dash - Butterfly
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/flowers/ title="Sunflower Dash - Flowers page">
+Sunflower Dash - Flowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
 <a class="hover-white no-underline white-90" href=/game-design/ title="Sunflower Dash - Game Design page">
 Sunflower Dash - Game Design
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/petals/ title="Sunflower Dash - Petals page">
+Sunflower Dash - Petals
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/shop/ title="Sunflower Dash - Shop page">
+Sunflower Dash - Shop
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/things-on-the-ground/ title="Sunflower Dash - Things on the ground page">
+Sunflower Dash - Things on the ground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/types_of_sunflowers/ title="Sunflower Dash - Types of sunflowers page">
+Sunflower Dash - Types of sunflowers
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/underground/ title="Sunflower Dash - Underground page">
+Sunflower Dash - Underground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/sunflowers/ title="Sunflowers page">
+Sunflowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
@@ -63,6 +108,9 @@ Temperate Designs
 </div>
 </div>
 </nav>
+<div class="tc-l pv6 ph3 ph4-ns">
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sunflowers</h1>
+</div>
 </div>
 </header>
 <main class=pb7 role=main>
@@ -83,7 +131,6 @@ Sunflowers
 <li>The flower petals are floating in the air and you need to jump to
 get them.</li>
 </ul>
-<p>Back to [Game Design]({{ site.baseurl }}{% link game-design.md %}).</p>
 </div>
 </article>
 </div>
