--- a/types_of_sunflowers/index.html
+++ b/types_of_sunflowers/index.html
@@ -2,32 +2,36 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Temperate Designs</title>
+<title>Sunflower Dash - Types of sunflowers | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+<meta name=description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted.
+There are many different types of sunflower. Here are a few:
  Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<meta property="og:title" content>
-<meta property="og:description" content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+<meta property="og:title" content="Sunflower Dash - Types of sunflowers">
+<meta property="og:description" content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted.
+There are many different types of sunflower. Here are a few:
  Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
 <meta property="og:type" content="article">
 <meta property="og:url" content="https://temperate-designs.github.io/types_of_sunflowers/"><meta property="article:section" content>
-<meta itemprop=name content>
-<meta itemprop=description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+<meta itemprop=name content="Sunflower Dash - Types of sunflowers">
+<meta itemprop=description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted.
+There are many different types of sunflower. Here are a few:
  Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
 <meta itemprop=wordCount content="307">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
-<meta name=twitter:title content>
-<meta name=twitter:description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted. There are many different types of sunflower. Here are a few:
+<meta name=twitter:title content="Sunflower Dash - Types of sunflowers">
+<meta name=twitter:description content="The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted.
+There are many different types of sunflower. Here are a few:
  Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O U Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick.">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
 <body class="ma0 avenir bg-near-white production">
-<header>
-<div class=bg-black>
+<header class="cover bg-top" style=background-image:url(https://temperate-designs.github.io/black-oil-sunflower.jpg)>
+<div class="pb3-m pb6-l bg-black-60">
 <nav class="pv3 ph3 ph4-ns" role=navigation>
 <div class="flex-l justify-between items-center center">
 <a href=/ class="f3 fw2 hover-white no-underline white-90 dib">
@@ -46,13 +50,58 @@ Contact
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
-<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash page">
+<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
 Sunflower Dash
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/bees-and-wasps/ title="Sunflower Dash - Bees and Wasps page">
+Sunflower Dash - Bees and Wasps
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/butterfly/ title="Sunflower Dash - Butterfly page">
+Sunflower Dash - Butterfly
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/flowers/ title="Sunflower Dash - Flowers page">
+Sunflower Dash - Flowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
 <a class="hover-white no-underline white-90" href=/game-design/ title="Sunflower Dash - Game Design page">
 Sunflower Dash - Game Design
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/petals/ title="Sunflower Dash - Petals page">
+Sunflower Dash - Petals
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/shop/ title="Sunflower Dash - Shop page">
+Sunflower Dash - Shop
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/things-on-the-ground/ title="Sunflower Dash - Things on the ground page">
+Sunflower Dash - Things on the ground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/types_of_sunflowers/ title="Sunflower Dash - Types of sunflowers page">
+Sunflower Dash - Types of sunflowers
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/underground/ title="Sunflower Dash - Underground page">
+Sunflower Dash - Underground
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/sunflowers/ title="Sunflowers page">
+Sunflowers
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
@@ -67,6 +116,9 @@ Temperate Designs
 </div>
 </div>
 </nav>
+<div class="tc-l pv6 ph3 ph4-ns">
+<h1 class="f2 f1-l fw2 white-90 mb0 lh-title">Sunflower Dash - Types of sunflowers</h1>
+</div>
 </div>
 </header>
 <main class=pb7 role=main>
@@ -76,30 +128,40 @@ Temperate Designs
 <p class="f6 b helvetica tracked">
 </p>
 <h1 class=f1>
+Sunflower Dash - Types of sunflowers
 </h1>
 </header>
 <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
-<p>The sunflowers will have faces that show if they are healthy/alive, eaten, or wilted.
-There are many different types of sunflower. Here are a few:</p>
+<p>The sunflowers will have faces that show if they are healthy/alive,
+eaten, or wilted.</p>
+<p>There are many different types of sunflower. Here are a few:</p>
 <ul>
-<li>Regular sunflowers have happy faces and stand still and don&rsquo;t do anything exept wilt over a set period time. Face:O O
-U</li>
-<li>Wilted sunflowers will break if you sit on them for too long. When they wilt, they will be bent over and have a brownish tint and look sick. They will have sad faces.
-Face: O O
-n</li>
-<li>Swaying sunflowers have silly faces and will sway from side to side. Player will have to time their jump or will fall off the sunflower
-and have to either get back on or face the consequences below. Face: @ @
-Y</li>
-<li>Eaten sunflowers have x eyes and little bites on the sides. They break as soon as you jump on them, then you fall onto the ground.
-are often near gopher holes or near different animals. They eat the sunflowers. These don&rsquo;t come very often. Face: X X
-n
-There are more types of flowers like</li>
-<li>Bell flower cannons are basically bell flowers. If you jump on one, it will slingshot you. You can&rsquo;t controll how far it slingshots you,
-and you can&rsquo;t controll where you go either. They slingshot you in the opposite direction the flower is from the stem (if it&rsquo;s on the left,
-it will slingshot you forwards, if it&rsquo;s on the right, it will slingshot you backwards.</li>
-<li>Weeds will hide stuff on the ground, and there&rsquo;s usually a small gap where they are; they take over from the sunflowers.</li>
-<li>Dandelions will scatter seeds that you can ride on. You can not controll where you go, and dissapear, leaving the seed. You can grab the
-seed to plant another dandelion (ex. if you need to cross a patch of weeds)</li>
+<li>Regular sunflowers have happy faces and stand still and don&rsquo;t do
+anything exept wilt over a set period time. Face:O O U</li>
+<li>Wilted sunflowers will break if you sit on them for too long. When
+they wilt, they will be bent over and have a brownish tint and look
+sick. They will have sad faces. Face: O O n</li>
+<li>Swaying sunflowers have silly faces and will sway from side to side.
+Player will have to time their jump or will fall off the sunflower
+and have to either get back on or face the consequences below. Face:
+@ @ Y</li>
+<li>Eaten sunflowers have x eyes and little bites on the sides. They
+break as soon as you jump on them, then you fall onto the ground.
+are often near gopher holes or near different animals. They eat the
+sunflowers. These don&rsquo;t come very often. Face: X X n There are more
+types of flowers like</li>
+<li>Bell flower cannons are basically bell flowers. If you jump on one,
+it will slingshot you. You can&rsquo;t controll how far it slingshots you,
+and you can&rsquo;t controll where you go either. They slingshot you in
+the opposite direction the flower is from the stem (if it&rsquo;s on the
+left, it will slingshot you forwards, if it&rsquo;s on the right, it will
+slingshot you backwards.</li>
+<li>Weeds will hide stuff on the ground, and there&rsquo;s usually a small gap
+where they are; they take over from the sunflowers.</li>
+<li>Dandelions will scatter seeds that you can ride on. You can not
+controll where you go, and dissapear, leaving the seed. You can grab
+the seed to plant another dandelion (ex. if you need to cross a
+patch of weeds)</li>
 </ul>
 </div>
 </article>
