deploy: d245c077da635b0200d793b8d1d2cc9e9ac126cd

--- a/404.html
+++ b/404.html
@@ -40,6 +40,11 @@ Contact
 </a>
 </li>
 <li class="list f5 f4-ns fw4 dib pr3">
+<a class="hover-white no-underline white-90" href=/sunflower-dash/ title="Sunflower Dash page">
+Sunflower Dash
+</a>
+</li>
+<li class="list f5 f4-ns fw4 dib pr3">
 <a class="hover-white no-underline white-90" href=/ title="Temperate Designs page">
 Temperate Designs
 </a>
