--- a/sunflower-dash/index.html
+++ b/sunflower-dash/index.html
@@ -2,22 +2,22 @@
 <head>
 <meta charset=utf-8>
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<title>Contact | Temperate Designs</title>
+<title>Sunflower Dash | Temperate Designs</title>
 <meta name=viewport content="width=device-width,minimum-scale=1">
-<meta name=description content="We'd love to hear from you">
+<meta name=description content="A fun game with lots of sunflowers">
 <meta name=generator content="Hugo 0.88.1">
 <meta name=ROBOTS content="INDEX, FOLLOW">
 <link rel=stylesheet href=/ananke/css/main.min.abe0b1c07d5e33565b0f9b998a7b1b5228b709f36af363e2766bc8035f2237b7.css>
-<meta property="og:title" content="Contact">
-<meta property="og:description" content="We'd love to hear from you">
+<meta property="og:title" content="Sunflower Dash">
+<meta property="og:description" content="A fun game with lots of sunflowers">
 <meta property="og:type" content="article">
-<meta property="og:url" content="https://temperate-designs.github.io/contact/"><meta property="article:section" content>
-<meta itemprop=name content="Contact">
-<meta itemprop=description content="We'd love to hear from you">
-<meta itemprop=wordCount content="5">
+<meta property="og:url" content="https://temperate-designs.github.io/sunflower-dash/"><meta property="article:section" content>
+<meta itemprop=name content="Sunflower Dash">
+<meta itemprop=description content="A fun game with lots of sunflowers">
+<meta itemprop=wordCount content="0">
 <meta itemprop=keywords content><meta name=twitter:card content="summary">
-<meta name=twitter:title content="Contact">
-<meta name=twitter:description content="We'd love to hear from you">
+<meta name=twitter:title content="Sunflower Dash">
+<meta name=twitter:description content="A fun game with lots of sunflowers">
 <script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','G-K69Z84DP1Y','auto'),ga('send','pageview'))</script>
 <script async src=https://www.google-analytics.com/analytics.js></script>
 </head>
@@ -67,11 +67,10 @@ Temperate Designs
 <p class="f6 b helvetica tracked">
 </p>
 <h1 class=f1>
-Contact
+Sunflower Dash
 </h1>
 </header>
 <div class="nested-copy-line-height lh-copy f4 nested-links nested-img mid-gray">
-<p>Send us email at <a href=mailto:temperatedesigns2@gmail.com>temperatedesigns2@gmail.com</a>.</p>
 </div>
 </article>
 </div>
