deploy: ee82964d2f16fe7be2034b2c2356bab838f3597b

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Go check them out!</p>
 </article>
 <div class="pa3 pa4-ns w-100 w-70-ns center">
 <h1 class=flex-none>
-Recent Articles
+Recent Posts
 </h1>
 <section class="w-100 mw8">
 <div class="relative w-100 mb4">
