deploy: 6202ac856c502eedbb46bc14c11ff8168183706c

--- a/products/index.html
+++ b/products/index.html
@@ -27,6 +27,11 @@
 </a>
 </li>
 <li class=p-2>
+<a href=/blog/>
+<span>Blog</span>
+</a>
+</li>
+<li class=p-2>
 <a href=/contact/>
 <span>Contact</span>
 </a>
@@ -34,16 +39,6 @@
 <li class=p-2>
 <a href=/privacy/>
 <span>Privacy</span>
-</a>
-</li>
-<li class=p-2>
-<a href=/sunflower-dash/>
-<span>Sunflower Dash</span>
-</a>
-</li>
-<li class=p-2>
-<a href=/>
-<span>Temperate Designs</span>
 </a>
 </li>
 </ul>
@@ -69,17 +64,14 @@ Products
 <a href=/about/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
 About
 </a>
+<a href=/blog/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
+Blog
+</a>
 <a href=/contact/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
 Contact
 </a>
 <a href=/privacy/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
 Privacy
-</a>
-<a href=/sunflower-dash/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
-Sunflower Dash
-</a>
-<a href=/ class="duration-200 block mt-4 lg:inline-block lg:mt-0 text-black hover:opacity-60 mr-8">
-Temperate Designs
 </a>
 </div>
 </div>
@@ -90,7 +82,19 @@ Temperate Designs
 <div class="mx-auto my-10 max-w-6xl">
 <div class="mx-3 col-span-3 lg:col-span-2 px-2">
 <h1 class="title text-5xl mb-4">Products</h1>
-<div class="content py-1"></div>
+<div class="content py-1"><p>Our apps are published in the <a href="https://play.google.com/store/apps/dev?id=5570979445892256716">Google Play
+Store</a>.
+Go check them out!</p>
+<h2 id=swn-race-timer>SWN Race Timer</h2>
+<p>A simple race timer with</p>
+<ul>
+<li>Single, group, and mass starts</li>
+</ul>
+<p></p>
+<h2 id=sunflower-dash>Sunflower Dash</h2>
+<p>Sunflower Dash is a fun game (still under active development)</p>
+<p>(not yet available)</p>
+</div>
 <div class="grid grid-cols-1 md:grid-cols-2 mb-2 gap-2">
 </div>
 </div>
@@ -111,11 +115,14 @@ Temperate Designs
 <div class="text-lg lg:flex-grow">
 </div>
 <div class=text-lg>
-<a href=/sunflower-dash/ class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
-Sunflower Dash
-</a>
 <a href=/ class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
-Temperate Designs
+Home
+</a>
+<a href=https://github.com/Temperate-Designs class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
+Github
+</a>
+<a href=https://temperate-designs.github.io/sunflower-dash/ class="block mt-4 lg:inline-block lg:mt-0 text-gray-300 hover:text-white mr-8">
+Sunflower Dash
 </a>
 </div>
 </div>
