deploy: 31b05cc1224d11c1853ec6e9e47b7ab284d6e12a

--- a/products/index.html
+++ b/products/index.html
@@ -90,6 +90,7 @@ Go check them out!</p>
 <ul>
 <li>Single, group, and mass starts</li>
 </ul>
+<p><a href="https://play.google.com/store/apps/details?id=com.temperatedesigns.swn_race_timer&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"><img src=/google-play-badge.png alt="SWN Race Timer"></a></p>
 <p></p>
 <h2 id=sunflower-dash>Sunflower Dash</h2>
 <p>Sunflower Dash is a fun game (still under active development)</p>
