deploy: 43d110ce34ab142d647148f9770aabd05e32625d

--- a/products/index.html
+++ b/products/index.html
@@ -8,7 +8,7 @@
 <meta name=viewport content="width=device-width,initial-scale=1">
 <link rel=icon href=/favicon-32x32.png>
 <link href=/css/fa5.min.css rel=stylesheet type=text/css>
-<link rel=stylesheet href="https://temperate-designs.github.io/css/styles.min.1a63551bca201fc5608c314eb803e3de354cbc257aa2cc3b9aa06e43d4e7fe40.css" integrity="sha256-GmNVG8ogH8VgjDFOuAPj3jVMvCV6osw7mqBuQ9Tn/kA=">
+<link rel=stylesheet href="https://temperate-designs.github.io/css/styles.min.79c8d7319234f17e1d3b5613d94bec0e084751f01c73daee69bcf98e904a3b8b.css" integrity="sha256-ecjXMZI08X4dO1YT2UvsDghHUfAcc9ruabz5jpBKO4s=">
 <link href=/css/style.min.css rel=stylesheet type=text/css>
 <link rel=stylesheet href=/css/custom.css>
 </head>
@@ -90,8 +90,8 @@ Go check them out!</p>
 <ul>
 <li>Single, group, and mass starts</li>
 </ul>
-<p><a href="https://play.google.com/store/apps/details?id=com.temperatedesigns.swn_race_timer&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"><img src=/google-play-badge.png alt="SWN Race Timer"></a></p>
-<p></p>
+<figure><a href="https://play.google.com/store/apps/details?id=com.temperatedesigns.swn_race_timer&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1" target=_blank><img src=https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png alt="Get it on Google Play" width=200></a>
+</figure>
 <h2 id=sunflower-dash>Sunflower Dash</h2>
 <p>Sunflower Dash is a fun game (still under active development)</p>
 <p>(not yet available)</p>
